<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:adjustViewBounds="false" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.listdetail.AddEditListActivity">

        <TextView
                android:id="@+id/addEditTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:layout_marginTop="@dimen/margin_padding_medium"
                android:layout_marginEnd="@dimen/margin_padding_medium"
                android:layout_marginBottom="@dimen/margin_padding_medium"
                android:text="@string/add_edit_list"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/listNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:layout_marginEnd="@dimen/margin_padding_medium"
                android:ems="10"
                android:hint="@string/enter_list_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addEditTitle" />

        <com.flask.colorpicker.ColorPickerView
                android:id="@+id/color_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_medium"
                android:layout_marginEnd="@dimen/margin_padding_medium"
                app:density="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listNameEdit"
                app:lightnessSlider="true"
                app:lightnessSliderView="@+id/v_lightness_slider"
                app:wheelType="FLOWER" />

        <com.flask.colorpicker.slider.LightnessSlider
                android:id="@+id/v_lightness_slider"
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_padding_medium"
                app:layout_constraintEnd_toEndOf="@+id/color_picker_view"
                app:layout_constraintStart_toStartOf="@+id/color_picker_view"
                app:layout_constraintTop_toBottomOf="@+id/color_picker_view" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveListBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_lightness_slider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>